--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -44,6 +44,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Masayuki Kudamatsu - Causal Inference with Spatial Data: ArcGIS 10 for Economics Research](https://sites.google.com/site/mkudamatsu/gis)
 - [WEconPol - Professional Development](https://www.womenineconpolicy.com/professional-development)
 - [R for data science](https://r4ds.had.co.nz/)
+- [Econometrics with R](https://www.econometrics-with-r.org/)
 - [Intro a STATA (Baum, 2021)](http://fmwww.bc.edu/GStat/docs/IntroStata.pdf)
 - [The STATA Guide](https://medium.com/the-stata-guide)
 
@@ -62,6 +63,13 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Applying to PhD Programs in Economics: An Extensive Guide](https://drive.google.com/file/d/1cTb8enoUZxFKscidXYwojK3bXSjb7dxr/edit)
 - [Alvin Christian - Applying to Economics PhD Programs Memo](https://drive.google.com/file/d/1QozD6_4_bvMd2o-q-yh9Doc5aQ6i3nPV/view?usp=sharing)
 - [American Economic Association - Considerations for prospective graduate students in economics (¡Varios recursos!)](https://www.aeaweb.org/resources/students/grad-prep/considerations)
+
+## Mentoría para aplicar al PhD
+
+- [LSE Economics PhD Applicant Mentoring Programme](https://www.lse.ac.uk/economics/study/research/applicant-mentoring-programme)
+- [Student-led MIT and Harvard Application Assistance and Mentoring Program](http://economics.mit.edu/graduate/application)
+- [Applicant Mentoring Programme (AMP)](https://sites.google.com/view/econphdamp/home)
+- [Duke's Graduate Mentorship Program](https://econ.duke.edu/phd-program/prospective-students/graduate-mentorship-program)
 
 ## Durante el Ph.D.
 
@@ -108,22 +116,6 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Consejos de Keith Head para presentar tablas de regresiones](http://blogs.ubc.ca/khead/research/research-advice/regression-tables)
 - [Consejos de Jonathan Schwabish para presentar tablas](https://twitter.com/jschwabish/status/1290323581881266177)
 
-## Testimonios y consejos profesionales
-
-- [Scarlet Chen - My Journey into Econ PhD](https://scarlet-chen.medium.com/my-journey-into-econ-phd-854cd892547b)
-- [Susan Athey - Professional Advice](https://athey.people.stanford.edu/professional-advice)
-
-## Recomendaciones sobre la vida académica en Economía
-
-- [The Hidden Curriculum (Podcast)](https://podcasts.apple.com/us/podcast/the-hidden-curriculum/id1526729667)
-
-## Otras compilaciones (bastante completas)
-
-- [Masayuki Kudamatsu - Tips 4 Economists](https://sites.google.com/site/mkudamatsu/tips4economists)
-- [Econphd](http://econphd.econwiki.com)
-- [Claes Backman - Tips for PhD Students](https://sites.google.com/view/claesbackman/tips-for-phd-students)
-- [Shanjun Li - PhD Resources](http://li.dyson.cornell.edu/phdRes.php) **Prestar bastante atención a los recursos de salud mental**
-
 ## Grupos y organizaciones de interés - enfocados en aumentar el bienestar y la diversidad de Grad Students
 
 - [Raise Seminar](https://sites.google.com/view/raiseminar/home?authuser=1). [(Twitter)](https://twitter.com/RaiseSeminar)
@@ -131,13 +123,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Women in Econ Policy](https://www.womenineconpolicy.com/career-resources)
 - [WEconPol - Organisations Database](https://docs.google.com/spreadsheets/d/13dSrtr0iLstD1AhWpQWOUIzlGLq-Tc6OGreNKKDIELI/edit#gid=1557672198)
 - [Research in Color Foundation](https://www.researchincolor.org/)
-
-## Oportunidades de Mentoría para aplicar al PhD
-
-- [LSE Economics PhD Applicant Mentoring Programme](https://www.lse.ac.uk/economics/study/research/applicant-mentoring-programme)
-- [Student-led MIT and Harvard Application Assistance and Mentoring Program](http://economics.mit.edu/graduate/application)
-- [Applicant Mentoring Programme (AMP)](https://sites.google.com/view/econphdamp/home)
-- [Duke's Graduate Mentorship Program](https://econ.duke.edu/phd-program/prospective-students/graduate-mentorship-program)
+- [Women In Economics Initiative](https://women-in-economics.com/)
 
 ## Bases de datos para research
 
@@ -151,11 +137,32 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [UC Berkeley PhD Math Camp](https://eml.berkeley.edu/~cshannon/e204_19.html)
 - [Yale PhD Math Camp](https://economics.yale.edu/graduate/math-camp-notes )
 - En caso desees certificación formal: [Harvard Extension School - Math Course Catalog](https://courses.extension.harvard.edu/course-catalog/courses?keyword=math)
+- [Curso Libre de Análisis Real en la Universidad de los Andes](https://educacioncontinua.uniandes.edu.co/es/programas/analisis-real) 
 
 ## Cursos de economía y relacionados
 
 - [Remote Student Exchange](https://remotestudentexchange.org) - para auditar cursos gratis
 - [Curso de microeonometría aplicada](https://mauricio-romero.com/teaching/microeconometria-aplicada-otono-2021/) - del Prof. Mauricio Romero (ITAM), en español
+- [PREDOC Summer Course in Social Science Analytics](https://predoc.org/events/predoc-summer-2021) 
+- [RI-EF Summer School in Economics and Finance (SSEF)](https://ri-ef.com/ssef/) 
+
+## Testimonios y consejos profesionales
+
+- [Scarlet Chen - My Journey into Econ PhD](https://scarlet-chen.medium.com/my-journey-into-econ-phd-854cd892547b)
+- [Susan Athey - Professional Advice](https://athey.people.stanford.edu/professional-advice)
+- [Matthew Hom - Private Sector Jobs for Economics PhD Students](https://www.dropbox.com/s/bmci0ffcfkhxmtg/Careers%20in%20Tech%20and%20Economics%20Consulting.pdf?dl=0preview=Careers+in+Tech+and+Economics+Consulting.pdf)
+
+## Otras compilaciones (bastante completas)
+
+- [Masayuki Kudamatsu - Tips 4 Economists](https://sites.google.com/site/mkudamatsu/tips4economists)
+- [Econphd](http://econphd.econwiki.com)
+- [Claes Backman - Tips for PhD Students](https://sites.google.com/view/claesbackman/tips-for-phd-students)
+- [Shanjun Li - PhD Resources](http://li.dyson.cornell.edu/phdRes.php) **Prestar bastante atención a los recursos de salud mental**
+
+## Recomendaciones sobre la vida académica en Economía
+
+- [The Hidden Curriculum (Podcast)](https://podcasts.apple.com/us/podcast/the-hidden-curriculum/id1526729667)
+
 
 ## Oportunidades de financiamiento
 
