--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -17,9 +17,9 @@ Estamos en proceso de convertirnos en ONG a partir del 2022 para poder contar co
 
 [contacto-link]:   https://econthaki.github.io/contact.html
 
-**Quiero participar de la Encuesta de RAs en Economía en LAC, ¿cuándo podré hacerlo?**
+**Quiero participar de la Encuesta de RAs en Economía en LAC, ¿aún puedo hacerlo?**
 
-La encuesta está siendo difundida desde setiembre del 2021. La población objetivo de la encuesta son asistentes de investigación de economía o carreras - o que lo hayan sido en los últimos 3 años- que tengan alguna relación con LAC. Pueden apoyarnos compartiendo el enlace a la [EAIE 2021][EAIE]
+Sí, la encuesta ha venido siendo difundida desde setiembre del 2021 y lo seguirá siendo hasta febrero del 2022. La población objetivo de la misma son asistentes de investigación de economía o carreras - o que lo hayan sido en los últimos 3 años- que tengan alguna relación con LAC. Actualmente tenemos datos sobre Perú, pero nos gustaría poder recoger datos de otros países también. Pueden apoyarnos compartiendo el enlace a la [EAIE 2021][EAIE]. Queremos publicar los resultados en el segundo trimestre del 2022.
 
 [EAIE]:   https://econthaki.surveycto.com/collect/eaie_2021?caseid=
 
@@ -32,14 +32,15 @@ Si eres estudiante de pregrado de economía o carreras afines (políticas públi
 Sabemos que las realidades de los distintos países de América Latina y el Caribe son heterogéneas. Comenzaremos operaciones en Perú porque el contenido de los talleres y estrategias para postular al posgrado está acotado para Perú. Esto será así para el primer año de la organización, ciclo 2021-2022. No obstante, buscaremos expandir operaciones para los ciclos venideros.
 
 **¿Cuándo se abrirá la convocatoria para participar de los programas?**
-Nuestro programa cuenta de tres fases componen un ciclo de 1 año. La fase 1 (talleres informativos) va de setiembre a octubre. La convocatoria para la fase 2 (capacitación) va de noviembre a diciembre. La fase 2 va de enero a febrero y la fase 3 (mentorías), de marzo a agosto. Comunicaremos la convocatoria a nuestros programas por nuestras redes sociales. Así que ¡a prestar atención!
+
+Nuestro programa cuenta de tres fases. La fase 1 (talleres informativos) se realiza de forma recurrente en base a la demanda por parte de las universidades que forman parte de nuestra población objetivo. La convocatoria para la fase 2 (capacitación) se realiza en diciembre y va de enero a marzo. La fase 3 (mentorías) va de abril a agosto. Las convocatorias para las fases 2 y 3 se realizarán de forma oportuna a través de nuestras redes sociales.
 
 **¿Cómo hago para participar como mentor del programa?**
 
-A partir de Noviembre 2021, abriremos convocatoria para participar como mentores. Los requisitos para ser *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios o recién graduados de programas doctorales en el exterior.
+A partir de Diciembre 2021, abriremos convocatoria para participar como mentores. Los requisitos para ser *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios (últimos años) o ya contar con el grado de Doctor en economía.
 
 **¿Cómo hago para participar del equipo de EconThaki?**
 
-En los próximos meses, abriremos distintas convocatorias para ser parte del equipo. Vamos a necesitar muchas manos. De todas maneras, si te interesa colaborar con tiempo para la organización, puedes contactarte con nosotros aquí [Contacto][contacto-link]
+En los próximos meses abriremos distintas convocatorias para ser parte del equipo. Vamos a necesitar muchas manos. De todas maneras, si te interesa colaborar con tiempo para la organización, puedes contactarte con nosotros aquí [Contacto][contacto-link]
 
 [contacto-link]:   https://econthaki.github.io/contact.html
