--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Eco-mienza"
 author: econthaki
 categories: [Programas]
-image: assets/images/ecomienza_banner.jpeg
+image: assets/images/ecomienza_banner.png
 featured: true
 ---
 
@@ -84,7 +84,6 @@ Los horarios estándar de los módulos son los martes de 6 a 9 pm. En el caso de
 * Inicio de clases: 11 de enero 2021
 * Clausura del programa: 8 de marzo 2022
 
-Referencia: [https://www.impacta.pe/programadeformacion](https://www.impacta.pe/programadeformacion)
 
 Link a  [Preguntas Frecuentes][pregfreq-link]
 
