--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Eco-mienza"
 author: econthaki
 categories: [Programas]
-image: assets/images/ecomienza_banner.png
+image: assets/images/ecomienza-cuadrado.jpeg
 featured: true
 ---
 
