upd detalle ecomienza

--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -11,15 +11,13 @@ featured: true
 
 **¿Qué es Eco-mienza?**
 
-Es un programa de formación que tiene como objetivos dotar de herramientas básicas de investigación aplicada a estudiantes de últimos ciclos y recién egresadas de carreras de economía y relacionadas de universidades públicas y/o de regiones de Perú. 
-
-Junto con: IPA, JPAL, y profesores invitados.
+Es un programa de formación que tiene como objetivos dotar de herramientas básicas de investigación aplicada a estudiantes de últimos ciclos y recién egresadas de carreras de economía y relacionadas de universidades públicas y/o de regiones de Perú que desarrollamos junto a IPA, JPAL LAC, y profesores invitados.
 
 **¿De qué va el programa?**
 
-El programa consta de 8 sesiones teóricas que se llevarán a cabo una vez por semana desde el 11 de enero al 8 de marzo. Cada sesión estará a cargo de distintas profesoras y/o instituciones aliadas. Además de ello, los participantes tendrán acceso a sesiones prácticas libres (horas de oficina) para desarrollar una propuesta de investigación a lo largo del programa. Estas sesiones estarán dirigidas por actuales estudiantes de programas doctorales. 
+El programa consta de 8 sesiones teóricas que se llevarán a cabo una vez por semana desde el 11 de enero al 1 de marzo. Cada sesión estará a cargo de distintas profesore/as y/o instituciones aliadas. Además de ello, los participantes tendrán acceso a sesiones prácticas libres (horas de oficina) para desarrollar una propuesta de investigación a lo largo del programa. Estas sesiones estarán dirigidas por actuales estudiantes de programas doctorales de economía de universidades como Harvard, Yale, U. Michigan, Boston University. Al finalizar el programa, cada participante presentará la propuesta de investigación que haya desarrollado a lo largo del programa.
 
-Al finalizar el programa, las estudiantes presentarán una propuesta de investigación propia. 
+Al finalizar el programa, las participantes presentarán una propuesta de investigación propia. 
 
 **¿Qué beneficios tendrán al ser parte de este programa?**
 
@@ -47,39 +45,36 @@ Al finalizar el programa, las estudiantes presentarán una propuesta de investig
 
 **¿Cómo postular?**
 
-- [Completar este formulario de inscripción hasta el 20 de diciembre](https://docs.google.com/forms/d/e/1FAIpQLScv75oLKGh6wIar_BCClp8q2HTMr9v1t8DxraSLmqiIgWZg2w/viewform)
+- Completar este formulario de inscripción hasta el 20 de diciembre: [bit.ly/ecomienza_form](https://bit.ly/ecomienza_form) 
 
-- Adjuntar tu CV y una carta de intención que responda a estas preguntas: ¿Por qué te gustaría participar?, ¿por qué te interesa la investigación y qué te gustaría responder a través de ella?, ¿cómo tus experiencias de vida te han motivado a este(os) tema(s)?)
+- Adjuntar tu CV (máx. 2 pags, sin documentar) y una carta de intención (max. 1 página) que responda a estas preguntas: ¿Por qué te gustaría participar?, ¿por qué te interesa la investigación y qué te gustaría responder a través de ella?, ¿cómo tus experiencias de vida te han motivado a este(os) tema(s)?)
 
 **¿A qué me comprometo al aceptar participar?**
 
 - Contar con disponibilidad para participar de las sesiones de capacitación del programa de formación. 
 
-- Ser parte de las actividades de la organización y promover nuevas entre estudiantes de sus universidades de orígen. 
+- Ser parte de las actividades de la organización y promover nuevas entre estudiantes de sus universidades de origen. 
 
 **¿Cuáles son los temas y quiénes enseñarán?**
 
- 
 
-| Sesión | Módulo                                                                      	  | Profesor(a)                   |
+| Sesión | Módulo                                                                      	     | Profesor(a)                   |
 |--------|-----------------------------------------------------------------------------------|------------------------------------------------------------------------|
-| 1      | Metodología de investigación                                                      | Selene Cueva.                                                          |
-| 2      | Micoeconometría aplicada I                                                        | Sebastián Tello Trillo                                                 |
-| 3      | Micoeconometría aplicada II                                                       | Sebastián Tello Trillo                                                 |
+| 1      | Intrducción a la investigación en economía aplicada                               | EconThaki                                                              |
+| 2      | Micoeconometría aplicada I                                                        | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
+| 3      | Micoeconometría aplicada II                                                       | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
 | 4      | Evaluación de impacto                                                             | J-PAL LAC                                                              |
-| 5      | Modelos macroeconómicos y sus aplicaciones                                        | Marco Ortiz, PhD. y profesor afiliado de la Universidad del Pacífico.  |
+| 5      | Modelos macroeconómicos y sus aplicaciones                                        | Marco Ortiz, Prof. Universidad del Pacífico.                           |
 | 6      | Programación en Stata                                                             | IPA Perú                                                               |
-| 7      | Introducción a la programación en Python y R  Buenas prácticas y reproducibilidad | Guiliana Barnuevo                                                      |
-| 8      | Presentaciones de propuestas de investigación                                     |                                                                        |
-
-
-Los horarios estándar de los módulos son los martes de 6 a 9 pm. En el caso del módulo 4, este se desarrollará de 
+| 7      | Introducción a la programación en Python y R. Buenas prácticas y reproducibilidad | Guiliana Barnuevo, Científica de Datos Grupo AJE                       |
+| 8      | Habilidades para el mercado laboral y la academia                                 | EconThaki                                                              |
+| 9      | Presentaciones de propuestas de investigación                                     |                                                                        |
+ 
+Los horarios estándar de los módulos son los martes de 6 a 9 pm. En el caso del módulo 4, este se desarrollará el sábado 5 de febrero 2022 a las 12m hora Perú.
 
 **¿Cuál es el cronograma?**
 
-
-
-* Inscripciones hasta el 20 de diciembre 2021
+* Inscripciones hasta el 20 de diciembre 2021 [aquí](https://bit.ly/ecomienza_form) 
 * Publicación de resultados admitidos: 1 de enero 2022
 * Inicio de clases: 11 de enero 2021
 * Clausura del programa: 8 de marzo 2022
