updt last details

--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -64,11 +64,12 @@ Al finalizar el programa, las participantes presentarán una propuesta de invest
 | 2      | Micoeconometría aplicada I                                                        | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
 | 3      | Micoeconometría aplicada II                                                       | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
 | 4      | Evaluación de impacto                                                             | J-PAL LAC                                                              |
-| 5      | Modelos macroeconómicos y sus aplicaciones                                        | Marco Ortiz, Prof. Universidad del Pacífico.                           |
+| 5      | Modelos macroeconómicos y aplicaciones                                            | Marco Ortiz Sosa, Prof. Universidad del Pacífico.                           |
 | 6      | Programación en Stata                                                             | IPA Perú                                                               |
-| 7      | Introducción a la programación en Python y R. Buenas prácticas y reproducibilidad | Guiliana Barnuevo, Científica de Datos Grupo AJE                       |
-| 8      | Habilidades para el mercado laboral y la academia                                 | EconThaki                                                              |
+| 7      | Introducción a la programación en Python y R.                                     | Guiliana Barnuevo, Científica de Datos Grupo AJE                       |
+| 8      | Desarrollo profesional en la academia                                             | EconThaki                                                              |
 | 9      | Presentaciones de propuestas de investigación                                     |                                                                        |
+ 
  
 Los horarios estándar de los módulos son los martes de 6 a 9 pm. En el caso del módulo 4, este se desarrollará el sábado 5 de febrero 2022 a las 12m hora Perú.
 
