--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -11,13 +11,11 @@ featured: true
 
 **¿Qué es Eco-mienza?**
 
-Es un programa de formación que tiene como objetivos dotar de herramientas básicas de investigación aplicada a estudiantes de últimos ciclos y recién egresadas de carreras de economía y relacionadas de universidades públicas y/o de regiones de Perú que desarrollamos junto a IPA, JPAL LAC, y profesores invitados.
+Es un programa de formación que tiene como objetivos dotar de herramientas básicas de investigación aplicada a estudiantes de últimos ciclos y recién egresadas de carreras de economía y relacionadas de universidades públicas y/o de regiones de Perú. Lo desarrolla EconThaki en esfuerzos conjuntos a IPA, JPAL LAC, y profesora/es invitada/os.
 
 **¿De qué va el programa?**
 
-El programa consta de 8 sesiones teóricas que se llevarán a cabo una vez por semana desde el 11 de enero al 1 de marzo. Cada sesión estará a cargo de distintas profesore/as y/o instituciones aliadas. Además de ello, los participantes tendrán acceso a sesiones prácticas libres (horas de oficina) para desarrollar una propuesta de investigación a lo largo del programa. Estas sesiones estarán dirigidas por actuales estudiantes de programas doctorales de economía de universidades como Harvard, Yale, U. Michigan, Boston University. Al finalizar el programa, cada participante presentará la propuesta de investigación que haya desarrollado a lo largo del programa.
-
-Al finalizar el programa, las participantes presentarán una propuesta de investigación propia. 
+El programa consta de 8 sesiones teórico-prácticas que se llevarán a cabo una vez por semana desde el 11 de enero al 8 de marzo. Cada sesión estará a cargo de distintas profesora/es y/o instituciones aliadas. Además de ello, los participantes tendrán acceso a sesiones prácticas libres (horas de oficina) para desarrollar una propuesta de investigación a lo largo del programa. Estas sesiones estarán dirigidas por actuales estudiantes de programas doctorales de economía de universidades como Harvard, Yale, U. Michigan, Boston University. Al finalizar el programa, cada participante presentará una propuesta de investigación propia. 
 
 **¿Qué beneficios tendrán al ser parte de este programa?**
 
@@ -60,13 +58,13 @@ Al finalizar el programa, las participantes presentarán una propuesta de invest
 
 | Sesión | Módulo                                                                      	     | Profesor(a)                   |
 |--------|-----------------------------------------------------------------------------------|------------------------------------------------------------------------|
-| 1      | Intrducción a la investigación en economía aplicada                               | EconThaki                                                              |
+| 1      | Intro. a la investigación en economía aplicada                                    | EconThaki                                                              |
 | 2      | Micoeconometría aplicada I                                                        | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
 | 3      | Micoeconometría aplicada II                                                       | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
 | 4      | Evaluación de impacto                                                             | J-PAL LAC                                                              |
 | 5      | Modelos macroeconómicos y aplicaciones                                            | Marco Ortiz Sosa, Prof. Universidad del Pacífico.                           |
 | 6      | Programación en Stata                                                             | IPA Perú                                                               |
-| 7      | Introducción a la programación en Python y R.                                     | Guiliana Barnuevo, Científica de Datos Grupo AJE                       |
+| 7      | Intro. a la programación en Python y R.                                           | Guiliana Barnuevo, Científica de Datos Grupo AJE                       |
 | 8      | Desarrollo profesional en la academia                                             | EconThaki                                                              |
 | 9      | Presentaciones de propuestas de investigación                                     |                                                                        |
  
