upd criterio seleccion

--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -47,6 +47,8 @@ El programa consta de 8 sesiones teórico-prácticas que se llevarán a cabo una
 
 - Adjuntar tu CV (máx. 2 pags, sin documentar) y una carta de intención (max. 1 página) que responda a estas preguntas: ¿Por qué te gustaría participar?, ¿por qué te interesa la investigación y qué te gustaría responder a través de ella?, ¿cómo tus experiencias de vida te han motivado a este(os) tema(s)?)
 
+Por objetivos educacionales, los cupos son limitados y serán definidos usando los datos proporcionados en la aplicación y un criterio de diversidad (geográfica, género, NSE).
+
 **¿A qué me comprometo al aceptar participar?**
 
 - Contar con disponibilidad para participar de las sesiones de capacitación del programa de formación. 
