--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -15,7 +15,7 @@ Es un programa de formación que tiene como objetivos dotar de herramientas bás
 
 **¿De qué va el programa?**
 
-El programa consta de 8 sesiones teórico-prácticas que se llevarán a cabo una vez por semana desde el 11 de enero al 8 de marzo. Cada sesión estará a cargo de distintas profesora/es y/o instituciones aliadas. Además de ello, los participantes tendrán acceso a sesiones prácticas libres (horas de oficina) para desarrollar una propuesta de investigación a lo largo del programa. Estas sesiones estarán dirigidas por actuales estudiantes de programas doctorales de economía de universidades como Harvard, Yale, U. Michigan, Boston University, entre otras. Al finalizar el programa, cada participante presentará una propuesta de investigación propia. 
+El programa consta de 8 sesiones teórico-prácticas que se llevarán a cabo una vez por semana desde el 11 de enero al 8 de marzo. Cada sesión estará a cargo de distintas profesora/es y/o instituciones aliadas. Además de ello, los participantes tendrán acceso a sesiones prácticas libres (horas de oficina) para desarrollar una propuesta de investigación a lo largo del programa. Estas sesiones estarán dirigidas por actuales estudiantes de programas doctorales de economía de universidades como Harvard, Yale, U. Michigan, Boston University, Columbia, entre otras. Al finalizar el programa, cada participante presentará una propuesta de investigación propia. 
 
 **¿Qué beneficios tendrán al ser parte de este programa?**
 
@@ -37,7 +37,7 @@ El programa consta de 8 sesiones teórico-prácticas que se llevarán a cabo una
 
 - Estudiar o haber estudiado en una universidad pública o de regiones en Perú
 
-- Haber completado al menos el 8vo ciclo de la universidad o haber egresado hace dos años.
+- Haber completado al menos el 8vo ciclo de la universidad o haber egresado de la carrera hace dos años o menos.
 
 - Ser parte del medio superior de su cohorte en la carrera de estudios.
 
