--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -71,7 +71,7 @@ Una academia en economía más grande, diversa y rigurosa.
     <td><img src="{{ site.baseurl }}/assets/images/lucia.PNG" alt="2" width = 300px height = 600px></td>
   </tr> 
   <tr>
-    <td>Mari es estudiante del MPA en la univeridad de Princeton. Su cuenta de Twitter es: <a href="https://twitter.com/mlzeta"> @mlzeta</a>
+    <td>María Luisa ama la comida y leer ficción. Es estudiante del MPA en la Universidad de Princeton. Su cuenta de Twitter es: <a href="https://twitter.com/mlzeta"> @mlzeta</a>
     </td>
     <td>Lucia es estudiante del MSc en economía de la universidad de Bonn. Su cuenta de Twitter es: <a href="https://twitter.com/LuciaGomezEcon"> @LuciaGomezEcon</a>
     </td>
@@ -81,7 +81,7 @@ Una academia en economía más grande, diversa y rigurosa.
     <td><img src="{{ site.baseurl }}/assets/images/johar.PNG"  alt="1" width = 300px height = 600px ></td>
   </tr> 
   <tr>
-    <td>Johar es economista de la UNSAAC . Su cuenta de Twitter es: <a href="https://twitter.com/joharcassa"> @joharcassa</a>
+    <td>Johar es economista de la UNSAAC, es apasionado del café y la pizza cusqueña . Su cuenta de Twitter es: <a href="https://twitter.com/joharcassa"> @joharcassa</a>
     </td>
   </tr>    
 </table>
