updating old links
closing hyperlinks

--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -42,7 +42,7 @@ El programa consta de 8 sesiones teórico-prácticas que se llevarán a cabo una
 
 **¿Cómo postular?**
 
-- Completar este formulario de inscripción hasta el 20 de diciembre: [bit.ly/ecomienza_form](https://bit.ly/ecomienza_form) 
+- Completar este formulario de inscripción hasta el 20 de diciembre: [inscripción finalizada] 
 
 - Adjuntar tu CV (máx. 2 pags, sin documentar) y una carta de intención (max. 1 página) que responda a estas preguntas: ¿Por qué te gustaría participar?, ¿por qué te interesa la investigación y qué te gustaría responder a través de ella?, ¿cómo tus experiencias de vida te han motivado a este(os) tema(s)?)
 
@@ -74,7 +74,7 @@ Los horarios estándar de los módulos son los martes de 6 a 9 pm. En el caso de
 
 **¿Cuál es el cronograma?**
 
-* Inscripciones hasta el 20 de diciembre 2021 [aquí](https://bit.ly/ecomienza_form) 
+* Inscripciones hasta el 20 de diciembre 2021 [inscripción finalizada] 
 * Publicación de resultados admitidos: 1 de enero 2022
 * Inicio de clases: 11 de enero 2021
 * Clausura del programa: 8 de marzo 2022
