--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -60,8 +60,8 @@ Por objetivos educacionales, los cupos son limitados y serán definidos usando l
 | Sesión | Módulo                                                                      	     | Profesor(a)                   |
 |--------|-----------------------------------------------------------------------------------|------------------------------------------------------------------------|
 | 1      | Intro. a la investigación en economía aplicada                                    | EconThaki                                                              |
-| 2      | Micoeconometría aplicada I                                                        | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
-| 3      | Micoeconometría aplicada II                                                       | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
+| 2      | Microeconometría aplicada I                                                        | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
+| 3      | Microeconometría aplicada II                                                       | Sebastián Tello Trillo, Prof. Universidad de Virginia                  |
 | 4      | Evaluación de impacto                                                             | J-PAL LAC                                                              |
 | 5      | Modelos macroeconómicos y aplicaciones                                            | Marco Ortiz Sosa, Prof. Universidad del Pacífico.                           |
 | 6      | Programación en Stata                                                             | IPA Perú                                                               |
