--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,25 +15,39 @@ En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la com
 
 
 **Últimas Actualizaciones:**
+-  [Entrevista a Lucía Torres Frasele][voces-ltorres],  estudiante del doctorado en economía en Syracuse University.
 
--  [Entrevista a Alex Carrasco][voces-acarrasco], estudiante del PhD en MIT 
+[voces-ltorres]:   https://econthaki.github.io/voces/2022/03/01/voces_lucia_torres.html
 
-[voces-acarrasco]:   https://econthaki.github.io/voces/2021/09/01/voces_acarrasco.html
-
-
-![acarrasco]({{site.baseurl}}/assets/images/Alex-Carrasco.jpg)
-
--  [Entrevista a Fabiola Alba][voces-falba], estudiante del doctorado en Economía en la Universidad de Columbia 
-
-[voces-falba]:   https://econthaki.github.io/voces/2021/06/01/voces_falba.html
+![ltorres]({{site.baseurl}}/assets/images/lucia_torres.jpg)
 
 
-![falba]({{site.baseurl}}/assets/images/Fabiola-Alba.jpg)
+
+-  [Entrevista a Carolina Vera (Universidad de Arizona)][voces-cvera], estudiante del doctorado y  forma parte de la red llamada BOWEN, Bolivian Women in Economics Network.
+
+[voces-cvera]:   https://econthaki.github.io/voces/2022/02/01/voces-cvera.html
+
+![cvera]({{site.baseurl}}/assets/images/carolina-vera.jpg)
+
 
 -  [Entrevista a Florencia Hnilo (Stanford Econ) y Sebastian Bauer (Stanford GSB)][voces-fs], ambos de Argentina y creadores del blog “Aplicar a un PhD en Economía desde Argentina”
 
 [voces-fs]:   https://econthaki.github.io/voces/2021/10/01/voces_fhnilo_sbauer.html
 
+![fs]({{site.baseurl}}/assets/images/FH-SB.jpg)
 
-![falba]({{site.baseurl}}/assets/images/FH-SB.jpg)
+
+-  [Entrevista a Fabiola Alba][voces-falba], estudiante del doctorado en Economía en la Universidad de Columbia 
+
+[voces-falba]:   https://econthaki.github.io/voces/2021/06/01/voces_falba.html
+
+![falba]({{site.baseurl}}/assets/images/Fabiola-Alba.jpg)
+
+
+-  [Entrevista a Alex Carrasco][voces-acarrasco], estudiante del PhD en MIT 
+
+[voces-acarrasco]:   https://econthaki.github.io/voces/2021/09/01/voces_acarrasco.html
+
+![acarrasco]({{site.baseurl}}/assets/images/Alex-Carrasco.
+
 
