--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -79,6 +79,12 @@ Los horarios estándar de los módulos son los martes de 6 a 9 pm. En el caso de
 * Inicio de clases: 11 de enero 2021
 * Clausura del programa: 8 de marzo 2022
 
+**Desarrollo del programa**
+
+- [Sesión Inaugural y admitidos](https://econthaki.github.io/programas/2022/01/01/listadeadmitidos.html)
+- [Aliados y mentores del Programa](https://econthaki.github.io/programas/2022/03/01/ecomienza-aliados.html)
+- [Clausura y graduados](https://econthaki.github.io/programas/2022/04/01/ecomienza22-graduados.html)
+
 
 Link a  [Preguntas Frecuentes][pregfreq-link]
 
