add unis and topics

--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -4,6 +4,7 @@ title:  "Eco-mienza"
 author: econthaki
 categories: [Programas]
 image: assets/images/ecomienza-cuadrado.png
+featured: true
 ---
 
 
