add unis and topics for all

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -48,6 +48,6 @@ En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la com
 
 [voces-acarrasco]:   https://econthaki.github.io/voces/2021/09/01/voces_acarrasco.html
 
-![acarrasco]({{site.baseurl}}/assets/images/Alex-Carrasco.jpg
+![acarrasco]({{site.baseurl}}/assets/images/Alex-Carrasco.jpg)
 
 
