--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -37,7 +37,7 @@ Nuestro programa cuenta de tres fases. La fase 1 (talleres informativos) se real
 
 **¿Cómo hago para participar como mentor del programa?**
 
-A partir de Diciembre 2021, abriremos convocatoria para participar como mentores. Los requisitos para ser *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios (últimos años) o ya contar con el grado de Doctor en economía.
+A partir de Agosto 2022, abriremos convocatoria para participar como mentores. Los requisitos para ser *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios (últimos años) o ya contar con el grado de Doctor en economía.
 
 **¿Cómo hago para participar del equipo de EconThaki?**
 
