--- a/_posts/2022-01-07-mentorias22.md
+++ b/_posts/2022-01-07-mentorias22.md
@@ -11,7 +11,7 @@ featured: true
 
 **Programa de mentorías de EconThaki**
 
-*Abrimos convocatoria a mentees y mentoras*
+*Abrimos convocatoria a mentees y mentor@s*
 
 **¿En qué consiste el programa de mentoría?**
 
@@ -23,6 +23,9 @@ Las participantes tendrán acceso a dos mentores: i) _mentor junior_ que le brin
 
 El programa también contempla el desarrollo de grupos de apoyo entre pares para la resolución de problemas y el dictado de talleres prácticos con el apoyo de organizaciones e investigadores asociados.
 
+**¡Inscríbete como mentee!**
+
+
 **¿Quiénes pueden participar del programa *como mentees* ?**
 
 Para participar del programa de mentorías de EconThaki en su edición 2022 deben completar [este formulario](https://forms.gle/nw17SRrp52rWffPv9) y cumplir los siguientes requisitos:
@@ -32,7 +35,7 @@ Para participar del programa de mentorías de EconThaki en su edición 2022 debe
 3. **Pertenecer al medio superior** de su cohorte en la carrera de estudios.
 4. **Contar con un proyecto de investigación en curso** que te gustaría trabajar.
 
-**Como *mentee*, ¿qué beneficios tendrán al ser parte de este programa?**
+**¿Qué beneficios tendrán los mentees al ser parte de este programa?**
 
 - Beca integral para participar del programa de mentorías y recibir talleres de desarrollo profesional y académico.
 - Ser parte de una comunidad de jóvenes profesionales interesados en investigación aplicada con incidencia de políticas públicas y en promover la diversidad.
@@ -42,29 +45,33 @@ Para participar del programa de mentorías de EconThaki en su edición 2022 debe
 **¿Cómo postular como *mentee* ?**
 
 - Completar [este formulario](https://forms.gle/nw17SRrp52rWffPv9) de inscripción hasta **el 6 de agosto**.
-- Adjuntar tu CV (máx. 2 paginas y sin documentar)
+- Adjuntar tu CV (máx. 2 páginas y sin documentar) 
 - Adjuntar tu propuesta de investigación (desde 5 páginas a más, con interlineado simple y fuente 12)
 
 Los cupos son limitados y serán definidos usando el perfil académico y de investigación de los aplicantes y un criterio de diversidad (geográfica, género, NSE).
 
-**Como *mentee,* ¿a qué me comprometo al aceptar participar?**
+**¿A qué me comprometo al aceptar participar?**
 
 - Contar con disponibilidad y compromiso para participar de las sesiones de mentoría que se programen con los dos mentores. Los horarios se acordarán al inicio del programa.
 - Participar de los talleres prácticos y de las sesiones entre pares que se organicen. El horario de estos talleres se presentarán en la sesión de bienvenida y se planean llevar a cabo fuera del horario laboral y durante los fines de semana.
 - Contar con un borrador final del proyecto de investigación y escribir un resumen de los resultados para difusión.
 - Ser parte de las actividades de la organización y promoverlas entre estudiantes de sus universidades de origen.
 
-Y si quiero ser mentor/a junio, ¿cuáles son los requisitos?
+**¡Inscríbete como mentor/a!**
 
-1. Ser asistente de investigación senior/pre-doc/magister/estudiante de doctorado con experiencia en el desarrollo de investigaciones en economía y afines.
-2. **Debes contar con tiempo para tener de 6-8 reuniones desde mediados de Agosto a Diciembre.** Deberás tener dos reuniones mensuales y cada reunión podrá tomar entre 30 y 60 minutos en el horario que acuerden con el/la mentee al inicio del programa.
-3. Estar comprometid@ por promover la diversidad en la investigación.
-4. Completar [este formulario](https://docs.google.com/forms/d/e/1FAIpQLScyayx9WhcxR80C0c_3JtoFiAjEuxDUTxvjsgom7xQKIfBjIw/viewform?usp=sf_link)hasta el fin de la convocatoria.
+**Y si quiero ser mentor/a junio, ¿cuáles son los requisitos?**
 
-**¿Cuál es el cronograma?**
+- Ser asistente de investigación senior/pre-doc/magister/estudiante de doctorado con experiencia en el desarrollo de investigaciones en economía y afines.
+- Debes contar con tiempo para tener de 6-8 reuniones desde mediados de Agosto a Diciembre. Deberás tener dos reuniones mensuales y cada reunión podrá tomar entre 30 y 60 minutos en el horario que acuerden con el/la mentee al inicio del programa.
+- Estar comprometid@ por promover la diversidad en la investigación.
+- Completar [este formulario](https://docs.google.com/forms/d/e/1FAIpQLScyayx9WhcxR80C0c_3JtoFiAjEuxDUTxvjsgom7xQKIfBjIw/viewform?usp=sf_link) **antes del 6 de agosto**.
+
+Si estás interesad@ en ayudarnos dentro de otras actividades del programa, puedes escribirnos al correo @contacto@econthaki.org
+
+**¿Cuál es el cronograma del programa de mentorías?**
 
 - Inscripciones abiertas: hasta el 6 de agosto.
-- Publicación de resultados de admitidos: 14 de agosto 2022
+- Publicación de resultados de admitidos: 17 de agosto 2022
 - Sesión de bienvenida: 20 de agosto 2021
 - Clausura del programa: 17 de diciembre 2022 (sujeto a confirmación)
 
